# Trae-cc

./: package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: autostart.rs  browser_auto_login.rs  custom_tempmail.rs  lib.rs  logger.rs  machine.rs  main.rs  privacy.rs  quick_register_backend.rs  quick_register_simple.rs  vv_bridge.rs
src-tauri/src/account/: account_manager.rs  mod.rs
src-tauri/src/api/: mod.rs  trae_api.rs
src/api/: core.ts  quickRegister.ts
src/components/: AccountCard.tsx  AddAccountModal.tsx  ContextMenu.tsx  Sidebar.tsx  WorkerSetupGuide.tsx
src/types/: index.ts
trae-vv/: Cargo.toml
trae-vv/src/: lib.rs
workers/: package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/src/: index.ts
