[package]
name = "trae-cc"
version = "1.0.7"
description = "Trae账号管理 - 管理 Trae 订阅账号使用量"
authors = ["HJH"]
edition = "2021"

[lib]
name = "trae_auto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
regex = "1"
rand = "0.8"
directories = "5"
base64 = "0.22"
warp = "0.3"
urlencoding = "2.1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging dependencies
tauri-plugin-log = "2"
log = "0.4"
fern = "0.7"
humantime = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_UI_WindowsAndMessaging",
] }



[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
